# sonu

./: .cursorrules  .gitignore  .lintstagedrc.json  AGENTS.md  AI_IMPLEMENTATION_REPORT.md  AI_INTEGRATION_PLAN.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUTOMATION_README.md  AUTOMATION_SETUP.md  CHANGELOG.md  CHECKPOINT-2026-02-19.md  CODE_CHANGES_READY_TO_DEPLOY.md  COMMERCIALIZATION_STRATEGY.md  COMMERCIALIZATION_SUMMARY.md  COMPLETION_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_IMPROVEMENTS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_REPORT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  LICENSE  PHASE1_COMPLETION_REPORT.md  README.md  README_STRATEGY.md  REORGANIZATION_PLAN.md  SECURITY.md  SONU_IMPROVEMENT_OPPORTUNITIES.md  START_HERE.md  VERSION.md  WARP.md  app_debug_output.txt  app_debug_output_3.txt  app_debug_output_final.txt  auto_screenshot.js  check_llm.py  (+6 more)
.antigravity/: trusted-commands
.claude/: settings.local.json
.github/: FUNDING.yml
.husky/: pre-commit  pre-push
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: Square284x284Logo.png.terabox.uploading.cfg
apps/tauri/src-tauri/src/: audio.rs  keyboard.rs  lib.rs  main.rs  transcribe.rs  vad.rs
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.yml
docs/: AI_FEATURES.md  ARCHITECTURE.md  BRAND_GUIDELINES.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  TAURI_V2_MIGRATION_GUIDE.md
locales/: en.json
plans/: CODEBASE_IMPROVEMENT_PLAN.md  ERROR_HANDLING_FIXES_SUMMARY.md  (+1 more)
(+332 files in other folders)
