[package]
name = "sonu-tauri"
version = "0.1.0"
description = "SONU - Fast Offline Voice Typing"
authors = ["Muhib"]
edition = "2021"

[lib]
name = "sonu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.15"

# Whisper integration (whisper.cpp bindings)
whisper-rs = "0.12"

# Keyboard simulation - for pasting transcribed text
enigo = "0.2"

# Voice Activity Detection (energy-based)
# Note: Can add silero-vad later for better accuracy

# Utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"

# Model downloading
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures-util = "0.3"
indicatif = "0.17"
